K8S manifests/deployment_db_master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-database-master-deployment
  namespace: kiii-project
spec:
  replicas: 1
  selector:
    matchLabels:
      database: master
      project: kiii_project
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        database: master
        project: kiii_project
    spec:
      containers:
        - name: postgresql-database-master-pod
          image: bitnami/postgresql:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-master-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-master-data
          persistentVolumeClaim:
            claimName: postgresql-database-master-pvc
