K8S manifests/statefull_set_database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-database-sts
  namespace: kiii-project
spec:
  replicas: 1
  selector:
    matchLabels:
      database: postgreSQL
      project: kiii_project
  serviceName: "postgresql-database-service"
  template:
    metadata:
      labels:
        project: kiii_project
        database: postgreSQL
    spec:
      #      terminationGracePeriodSeconds: 10
      containers:
        - name: postgresql-database-pod
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-database-volume-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-database-volume-claim
        namespace: kiii-project
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 1Gi
