K8S manifests/service_backend_app.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  namespace: kiii-project
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    framework: spring_boot
    project: kiii_project
    title: balloon_app
#    matchLabels:
#      project: kiii_project
#      title: balloon_app
#      framework: spring_boot
