K8S manifests/service_database_master.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-database-master-service
  namespace: kiii-project
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    database: master
    project: kiii_project
